--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.24.5",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.4.0",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "react-share": "^5.2.2",
     "react-toastify": "^11.0.5",
